Migrate Java client to Java 25 FFM