@@ -32,7 +32,7 @@
   </scm>
 
   <properties>
-    <maven.compiler.release>21</maven.compiler.release>
+    <maven.compiler.release>25</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -43,10 +43,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
         <configuration>
-          <release>21</release>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-          </compilerArgs>
+          <release>25</release>
         </configuration>
       </plugin>
       <plugin>
@@ -66,9 +63,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.11.2</version>
-        <configuration>
-          <additionalOptions>--enable-preview</additionalOptions>
-        </configuration>
         <executions>
           <execution>
             <id>attach-javadocs</id>
